--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mohamed Eldefrawy",
   "license": "ISC",
   "devDependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.3"
   }
 }
