--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.3"
+  },
+  "dependencies": {
+    "mongoose": "^6.3.0"
   }
 }
